Grease pencil time offset modifier doesn't work if the animation is 1 frame long. #114685

Closed
opened 2023-11-09 20:27:46 +01:00 by mfn-mln · 3 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: AMD Radeon HD 7600M Series ATI Technologies Inc. 4.5.13399 Core Profile Context 0

Blender Version
Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: e53e55951e7a
Worked: (newest version of Blender that worked as expected)

Short description of error
Grease pencil time offset modifier doesn't work if the animation is 1 frame long.

Exact steps for others to reproduce the error

  1. Add a grease pencil object.
  2. Draw 2 or more frames.
  3. Add a time offset modifier.
  4. Set the animation's start and last frame to the same number.
  5. Scroll on the timeline.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: AMD Radeon HD 7600M Series ATI Technologies Inc. 4.5.13399 Core Profile Context 0 **Blender Version** Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: `e53e55951e7a` Worked: (newest version of Blender that worked as expected) **Short description of error** Grease pencil time offset modifier doesn't work if the animation is 1 frame long. **Exact steps for others to reproduce the error** 1. Add a grease pencil object. 2. Draw 2 or more frames. 3. Add a time offset modifier. 4. Set the animation's start and last frame to the same number. 5. Scroll on the timeline.
mfn-mln added the
Status
Needs Triage
Severity
Normal
Type
Report
labels 2023-11-09 20:27:47 +01:00
Member

Hi, thanks for the report. I can confirm. Quick fix can be:

diff --git a/source/blender/gpencil_modifiers_legacy/intern/MOD_gpencil_legacy_time.cc b/source/blender/gpencil_modifiers_legacy/intern/MOD_gpencil_legacy_time.cc
index 8ba9add092c..746f4a865d7 100644
--- a/source/blender/gpencil_modifiers_legacy/intern/MOD_gpencil_legacy_time.cc
+++ b/source/blender/gpencil_modifiers_legacy/intern/MOD_gpencil_legacy_time.cc
@@ -102,7 +102,7 @@ static int remap_time(GpencilModifierData *md,
     offset = abs(efra - sfra + offset + 1);
   }
   /* Avoid inverse ranges. */
-  if (efra <= sfra) {
+  if (efra < sfra) {
     return cfra;
   }

@antoniov , does it look correct enough to commit directly?

Hi, thanks for the report. I can confirm. Quick fix can be: ```Diff diff --git a/source/blender/gpencil_modifiers_legacy/intern/MOD_gpencil_legacy_time.cc b/source/blender/gpencil_modifiers_legacy/intern/MOD_gpencil_legacy_time.cc index 8ba9add092c..746f4a865d7 100644 --- a/source/blender/gpencil_modifiers_legacy/intern/MOD_gpencil_legacy_time.cc +++ b/source/blender/gpencil_modifiers_legacy/intern/MOD_gpencil_legacy_time.cc @@ -102,7 +102,7 @@ static int remap_time(GpencilModifierData *md, offset = abs(efra - sfra + offset + 1); } /* Avoid inverse ranges. */ - if (efra <= sfra) { + if (efra < sfra) { return cfra; } ``` @antoniov , does it look correct enough to commit directly?
Pratik Borhade added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-10 08:08:30 +01:00

@PratikPB2123 Sure! the change is minimum.

@PratikPB2123 Sure! the change is minimum.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-10 11:39:05 +01:00
Member

Thanks @antoniov , committed: 270fc860cf

Thanks @antoniov , committed: 270fc860cf436e4667efaadd00d682715cef48a8
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114685
No description provided.