Fix #114685: GP time offset modifier doesn't work if the animation is 1 frame long

This is due to the early return of current frame when start and end of
custom range is same