source/blender/gpencil_modifiers/intern/MOD_gpenciltime.c
@@ -67,7 +67,7 @@ static int remapTime(struct GpencilModifierData *md,
     offset = abs(efra - sfra + offset + 1);
   }
   /* Avoid inverse ranges. */
-  if (efra <= sfra) {
+  if (efra < sfra) {
     return cfra;
   }
 
